Rest: node stats - lastBlockTxSize -> lastBlockContentSize, rename
